--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js">
         
     </script>
 </head>
 <body>
+    <div class="container">   
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
+    <div class="info">
+        <div class="pscore">
+            Player Score: 0
+        </div>
+        <div class="cscore">
+            Computer Score: 0
+        </div>
+        <div class="status">
+            Choose an item to start the game!
+        </div>
+    </div>
+
+
      
 </body>
 </html>
